@@ -112,6 +112,7 @@ v 8.12.0 (unreleased)
   - Use default clone protocol on "check out, review, and merge locally" help page URL
   - API for Ci Lint !5953 (Katarzyna Kobierska Urszula Budziszewska)
   - Allow bulk update merge requests from merge requests index page
+  - Add notification_settings API calls !5632 (mahcsig)
 
 v 8.11.6 (unreleased)
 
